hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__load_function@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private ptr @_hl.main.2() {
alloca_block:
  %"0" = alloca ptr, align 8
  %"5_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @_hl.target_func.1, ptr %"5_0", align 8
  %"5_01" = load ptr, ptr %"5_0", align 8
  store ptr %"5_01", ptr %"0", align 8
  %"02" = load ptr, ptr %"0", align 8
  ret ptr %"02"
}

declare void @_hl.target_func.1()
